# SecurityFile

./: README.md
Client/: CMakeLists.txt  sfile.cpp
Server/: CMakeLists.txt  Makefile  SecurityFile.cpp  create_db.sql  how_to_setup_db
libraries/myLibrary/: AES.cpp  AES.hpp  DbManager.cpp  DbManager.hpp  FileEncrypt.cpp  FileEncrypt.hpp  FileManager.cpp  FileManager.hpp  UserAuth.cpp  UserAuth.hpp  UsersManager.cpp  UsersManager.hpp  define.cpp  define.hpp
